{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 152,
  "lineage": "0c1024f2-0805-4a04-b2d2-59722a66038a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f3edc650cbc10e",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:elastic-ip/eipalloc-0c8f3edc650cbc10e",
            "associate_with_private_ip": "true",
            "association_id": "eipassoc-02bb7ce23bf0c3e32",
            "domain": "vpc",
            "id": "eipalloc-0c8f3edc650cbc10e",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0eae82cd561cf60c6",
            "private_dns": "ip-10-0-0-146.eu-west-3.compute.internal",
            "private_ip": "10.0.0.146",
            "public_dns": "ec2-15-236-241-113.eu-west-3.compute.amazonaws.com",
            "public_ip": "15.236.241.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "attack_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08da5407960580f18",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:instance/i-0aaf955d93d411fd8",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMInstanceProfile",
            "id": "i-0aaf955d93d411fd8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02280bd7a005cd8d1"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0a328369c2ae98a8d"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02280bd7a005cd8d1",
            "private_dns": "ip-10-0-0-20.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.20",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0942550fd4e5e5880",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Attack-VM"
            },
            "tags_all": {
              "Name": "Attack-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468a0915621a6a2b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.bastion",
            "aws_network_interface.attack_vm_eni_private",
            "aws_network_interface.attack_vm_eni_public",
            "aws_security_group.bastion_sg",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08da5407960580f18",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:instance/i-0839ea078ecca61fd",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMInstanceProfile",
            "id": "i-0839ea078ecca61fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-095ced263e326b33d",
            "private_dns": "ip-10-0-0-191.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.191",
            "public_ip": "35.181.172.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e8c431a313d72bfd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Bastion-Host"
            },
            "tags_all": {
              "Name": "Bastion-Host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0031251c7263589b6"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "suricata_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08da5407960580f18",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:instance/i-0a0fb99ee3fc831f9",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMInstanceProfile",
            "id": "i-0a0fb99ee3fc831f9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0fb0c8deecd512950"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0a6b866221064cf37"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb0c8deecd512950",
            "private_dns": "ip-10-0-0-10.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2d97ee1262de87a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Suricata-VM"
            },
            "tags_all": {
              "Name": "Suricata-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468a0915621a6a2b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.bastion",
            "aws_network_interface.suricata_vm_eni_private",
            "aws_network_interface.suricata_vm_eni_public",
            "aws_security_group.bastion_sg",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08da5407960580f18",
            "arn": "arn:aws:ec2:eu-west-3:050752608040:instance/i-0a4d4e004570c0d20",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2SSMInstanceProfile",
            "id": "i-0a4d4e004570c0d20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0de63ae11622bdc9b"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-07ff9d953a1743f23"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0de63ae11622bdc9b",
            "private_dns": "ip-10-0-0-30.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039c6a2fe3cbb0ad2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Web-VM"
            },
            "tags_all": {
              "Name": "Web-VM"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0468a0915621a6a2b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ec2_ssm_instance_profile",
            "aws_iam_role.ec2_ssm_role",
            "aws_instance.bastion",
            "aws_network_interface.web_vm_eni_private",
            "aws_network_interface.web_vm_eni_public",
            "aws_security_group.bastion_sg",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:internet-gateway/igw-0327fc5b4412759a3",
            "id": "igw-0327fc5b4412759a3",
            "owner_id": "050752608040",
            "tags": {
              "Name": "main_igw"
            },
            "tags_all": {
              "Name": "main_igw"
            },
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c8f3edc650cbc10e",
            "association_id": "eipassoc-02bb7ce23bf0c3e32",
            "connectivity_type": "public",
            "id": "nat-082f51e19f0cf88ec",
            "network_interface_id": "eni-0eae82cd561cf60c6",
            "private_ip": "10.0.0.146",
            "public_ip": "15.236.241.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "main_nat"
            },
            "tags_all": {
              "Name": "main_nat"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "attack_vm_eni_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-0a328369c2ae98a8d",
            "attachment": [
              {
                "attachment_id": "eni-attach-0887c7cc8a9cbf336",
                "device_index": 1,
                "instance": "i-0aaf955d93d411fd8"
              }
            ],
            "id": "eni-0a328369c2ae98a8d",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:d9:b9:cf:18:97",
            "owner_id": "050752608040",
            "private_ip": "10.0.1.20",
            "private_ip_list": [
              "10.0.1.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01288f7120353ee8b",
            "tags": {
              "Name": "Attack-VM-ENI-Private"
            },
            "tags_all": {
              "Name": "Attack-VM-ENI-Private"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "attack_vm_eni_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-02280bd7a005cd8d1",
            "attachment": [
              {
                "attachment_id": "eni-attach-07ee198931aea70f8",
                "device_index": 0,
                "instance": "i-0aaf955d93d411fd8"
              }
            ],
            "id": "eni-02280bd7a005cd8d1",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:2d:67:ed:d4:e9",
            "owner_id": "050752608040",
            "private_ip": "10.0.0.20",
            "private_ip_list": [
              "10.0.0.20"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.20"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Attack-VM-ENI-Public"
            },
            "tags_all": {
              "Name": "Attack-VM-ENI-Public"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "suricata_vm_eni_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-0a6b866221064cf37",
            "attachment": [
              {
                "attachment_id": "eni-attach-0193b97ada54d648b",
                "device_index": 1,
                "instance": "i-0a0fb99ee3fc831f9"
              }
            ],
            "id": "eni-0a6b866221064cf37",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:09:85:11:eb:41",
            "owner_id": "050752608040",
            "private_ip": "10.0.1.10",
            "private_ip_list": [
              "10.0.1.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01288f7120353ee8b",
            "tags": {
              "Name": "Suricata-VM-ENI-Private"
            },
            "tags_all": {
              "Name": "Suricata-VM-ENI-Private"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "suricata_vm_eni_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-0fb0c8deecd512950",
            "attachment": [
              {
                "attachment_id": "eni-attach-011cbd31ba0c3e507",
                "device_index": 0,
                "instance": "i-0a0fb99ee3fc831f9"
              }
            ],
            "id": "eni-0fb0c8deecd512950",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:85:55:27:55:7b",
            "owner_id": "050752608040",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "Suricata-VM-ENI-Public"
            },
            "tags_all": {
              "Name": "Suricata-VM-ENI-Public"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_vm_eni_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-07ff9d953a1743f23",
            "attachment": [
              {
                "attachment_id": "eni-attach-032618d797d127b46",
                "device_index": 1,
                "instance": "i-0a4d4e004570c0d20"
              }
            ],
            "id": "eni-07ff9d953a1743f23",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:6f:79:be:90:d3",
            "owner_id": "050752608040",
            "private_ip": "10.0.1.30",
            "private_ip_list": [
              "10.0.1.30"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.30"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01288f7120353ee8b",
            "tags": {
              "Name": "WEB-VM-ENI-Private"
            },
            "tags_all": {
              "Name": "WEB-VM-ENI-Private"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_vm_eni_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:network-interface/eni-0de63ae11622bdc9b",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c95479f5038814a4",
                "device_index": 0,
                "instance": "i-0a4d4e004570c0d20"
              }
            ],
            "id": "eni-0de63ae11622bdc9b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:c1:22:9c:73:4d",
            "owner_id": "050752608040",
            "private_ip": "10.0.0.30",
            "private_ip_list": [
              "10.0.0.30"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.30"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-07be6d01fec2a8144"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02723d051056e9e86",
            "tags": {
              "Name": "WEB-VM-ENI-Public"
            },
            "tags_all": {
              "Name": "WEB-VM-ENI-Public"
            }
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_security_group.vm_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:route-table/rtb-0ab3ee9e4794590c8",
            "id": "rtb-0ab3ee9e4794590c8",
            "owner_id": "050752608040",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-082f51e19f0cf88ec",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:route-table/rtb-0f774c5f7c25369d0",
            "id": "rtb-0f774c5f7c25369d0",
            "owner_id": "050752608040",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0327fc5b4412759a3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f2eeadaa57741a4",
            "route_table_id": "rtb-0ab3ee9e4794590c8",
            "subnet_id": "subnet-01288f7120353ee8b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e0bb9f07ec6a27e",
            "route_table_id": "rtb-0f774c5f7c25369d0",
            "subnet_id": "subnet-02723d051056e9e86"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:security-group/sg-0031251c7263589b6",
            "description": "Allow SSH access to bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0031251c7263589b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion_sg",
            "name_prefix": "",
            "owner_id": "050752608040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion_sg"
            },
            "tags_all": {
              "Name": "bastion_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:security-group/sg-07be6d01fec2a8144",
            "description": "Allow SSH access from bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07be6d01fec2a8144",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.191/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vm_sg",
            "name_prefix": "",
            "owner_id": "050752608040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vm_sg"
            },
            "tags_all": {
              "Name": "vm_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:subnet/subnet-01288f7120353ee8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01288f7120353ee8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752608040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet"
            },
            "tags_all": {
              "Name": "private_subnet"
            },
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:subnet/subnet-02723d051056e9e86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02723d051056e9e86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "050752608040",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet"
            },
            "tags_all": {
              "Name": "public_subnet"
            },
            "vpc_id": "vpc-09304c184dc2951ac"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:050752608040:vpc/vpc-09304c184dc2951ac",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c4d700639a10f5d",
            "default_route_table_id": "rtb-027ad28c248c98999",
            "default_security_group_id": "sg-0468a0915621a6a2b",
            "dhcp_options_id": "dopt-0a020334efe8da372",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09304c184dc2951ac",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027ad28c248c98999",
            "owner_id": "050752608040",
            "tags": {
              "Name": "main_vpc"
            },
            "tags_all": {
              "Name": "main_vpc"
            }
          }
        }
      ]
    }
  ]
}